Integration des details du magasin
